- add default loging to fallback invoker